tests/baselines/reference/decrementAndIncrementOperators.errors.txt
tests/cases/compiler/decrementAndIncrementOperators.ts(4,1): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
tests/cases/compiler/decrementAndIncrementOperators.ts(6,1): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
tests/cases/compiler/decrementAndIncrementOperators.ts(7,1): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
tests/cases/compiler/decrementAndIncrementOperators.ts(9,3): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
tests/cases/compiler/decrementAndIncrementOperators.ts(10,3): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
tests/cases/compiler/decrementAndIncrementOperators.ts(12,1): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
tests/cases/compiler/decrementAndIncrementOperators.ts(13,1): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
tests/cases/compiler/decrementAndIncrementOperators.ts(15,3): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
tests/cases/compiler/decrementAndIncrementOperators.ts(16,3): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
tests/cases/compiler/decrementAndIncrementOperators.ts(18,1): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
tests/cases/compiler/decrementAndIncrementOperators.ts(19,1): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
tests/cases/compiler/decrementAndIncrementOperators.ts(21,3): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
tests/cases/compiler/decrementAndIncrementOperators.ts(22,3): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.


==== tests/cases/compiler/decrementAndIncrementOperators.ts (13 errors) ====
    var x = 0;
    
    // errors
    1 ++;
    ~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    
    (1)++;
    ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    (1)--;
    ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    
    ++(1);
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    --(1);
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    
    (1 + 2)++;
    ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    (1 + 2)--;
    ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    
    ++(1 + 2);
      ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    --(1 + 2);
      ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    
    (x + x)++;
    ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    (x + x)--;
    ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    
    ++(x + x);
      ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    --(x + x);
      ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    
    //OK
    x++;
    x--;
    
    ++x;
    --x;
    
    (x)++;
    --(x);
    
    ((x))++;
    ((x))--;
    
    x[x++]++;
    